; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/enc/extr_quant_enc.c_QualityToCompression.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/enc/extr_quant_enc.c_QualityToCompression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double)* @QualityToCompression to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @QualityToCompression(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  store double %0, double* %2, align 8
  %5 = load double, double* %2, align 8
  %6 = fcmp olt double %5, 7.500000e-01
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load double, double* %2, align 8
  %9 = fmul double %8, 0x3FE5555555555555
  br label %14

10:                                               ; preds = %1
  %11 = load double, double* %2, align 8
  %12 = fmul double 2.000000e+00, %11
  %13 = fsub double %12, 1.000000e+00
  br label %14

14:                                               ; preds = %10, %7
  %15 = phi double [ %9, %7 ], [ %13, %10 ]
  store double %15, double* %3, align 8
  %16 = load double, double* %3, align 8
  %17 = call double @pow(double %16, i32 0)
  store double %17, double* %4, align 8
  %18 = load double, double* %4, align 8
  ret double %18
}

declare dso_local double @pow(double, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
